--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Краски</title>
+    <title>Colors</title>
   </head>
-  <body>
-    <h1>Краски</h1>
-
-  </body>
+  <body></body>
 </html>
