refactor: change link-callback-tel

--- a/src/ui/link-callback-tel.html
+++ b/src/ui/link-callback-tel.html
@@ -1,1 +1,4 @@
-<a class="link-callback-tel" href="#">Заказать звонок</a>
+<a class="link-callback-tel" href="#">
+  <span class="link-callback-tel__number">+7 (495) 221-77-69</span>
+  <span class="link-callback-tel__placeholder">Заказать звонок</span>
+</a>
