init: install pug

--- a/src/indexOld.html
+++ b/src/indexOld.html
@@ -9,3 +9,6 @@
     <h1>Colors</h1>
   </body>
 </html>
+
+<!-- link(href="./index.scss" rel="stylesheet") -->
+<!-- script(src="./index.js" defer="defer") -->
